# secure-web-app-file-transfer

./: README.md  main.py  pyproject.toml  test_main.http
app/: package-lock.json
buisness_logic/: file_manager.py  user_manager.py
configuration/: constants.py  yaml_config.py
html/: index.html
model/authentication/: user.py
model/input/: file_index.py
resources/configuration/: server_configuration.yaml
utils/: cache.py
